--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				
 				let f=document.getElementById("footer");
 				f.innerHTML=egg[Math.floor(rnd()*egg.length)].replace("GV", "<a href=\"https://github.com/GVmG\" target=_blank>Raechel</a>");
-				f.innerHTML+=" • Font: <a href=\"https://fonts.google.com/specimen/Outfit\" target=_blank>Outfit from Google Fonts</a> • Uses <a href=\"https://github.com/davidbau/seedrandom\" target=_blank>seedrandom.js by David Bau</a> • Current seed: <a onclick=\"shareSeed()\">"+seed+"<a>";
+				f.innerHTML+=" • Source code <a href=\"https://github.com/GVmG/wirtbingo/tree/gh-pages\" target=_blank>on GitHub</a> • Font: <a href=\"https://fonts.google.com/specimen/Outfit\" target=_blank>Outfit from Google Fonts</a> • Uses <a href=\"https://github.com/davidbau/seedrandom\" target=_blank>seedrandom.js by David Bau</a> • Now with "+bingos.length+" entries! • Current seed: <a onclick=\"shareSeed()\">"+seed+"<a>";
 			}
 		</script>
 	</body>
