--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
-		<script src="entries.js"></script>
-		<script src="tipsnotif.js"></script>
+		<script src="./entries.js"></script>
+		<script src="./tipsnotif.js"></script>
 		
 		<meta charset="utf-8"/>
 	</head>
