--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Maji Bingo - twitch.tv/majijej</title>
 		<link rel="stylesheet" href="style.css">
-		<link rel="shortcut icon" id="fav" type="image/png" href="favicon.png"/>
+		<link rel="shortcut icon" id="fav" type="image/png" href="majiiBlanket.png"/>
 		
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
